unpackaged/main/default/objects/Opportunity/fields/abacus__Committed_Date__c.field-meta.xml
<CustomField>
    <fullName>abacus__Committed_Date__c</fullName>
    <description>The date when the Opportunity becomes Committed, or Finalized and Won. It is set automatically if left blank. Changing this date after accounting data is generated doesn't affect existing data. Populates the Transaction Date on some Allocation Ledger Entries if it's not a future date.</description>
    <inlineHelpText>The date when the Opportunity becomes Committed, or Finalized and Won. It is set automatically if left blank.</inlineHelpText>
    <label>Committed Date</label>
    <type>Date</type>
</CustomField>