unpackaged/main/default/objects/Opportunity/fields/abacus__Donor_Id__c.field-meta.xml
<CustomField>
    <fullName>abacus__Donor_Id__c</fullName>
    <description>The Id of the Donor: Primary Contact if present, otherwise Account</description>
    <formula>IF(ISBLANK(npsp__Primary_Contact__c),AccountId,npsp__Primary_Contact__c)</formula>
    <inlineHelpText>The Id of the Donor: Primary Contact if present, otherwise Account</inlineHelpText>
    <label>Donor Id</label>
    <type>Text</type>
</CustomField>