unpackaged/main/default/objects/Opportunity/fields/abacus__Revenue_Grouping_Scheme__c.field-meta.xml
<CustomField>
    <fullName>abacus__Revenue_Grouping_Scheme__c</fullName>
    <description>Automatically set to indicate how allocation Ledger Entries are generated in this Opportunity's accounting data, maintaining its behavior even if the org-wide setting changes. If set to 1, an allocation Ledger Entry is created for each GAU Allocation. If set to 2, an allocation Ledger Entry is created for each Payment Allocation.</description>
    <inlineHelpText>If set to 1, an allocation Ledger Entries is created for each GAU Allocation. If set to 2, an allocation Ledger Entry is created for each Payment Allocation. Do not edit.</inlineHelpText>
    <label>DEPRECATED - Revenue Grouping Scheme</label>
    <length>2</length>
    <type>Text</type>
</CustomField>