unpackaged/main/default/objects/Opportunity/fields/Amount_Matched_by_Donor_Summary__c.field-meta.xml
<CustomField>
    <fullName>Amount_Matched_by_Donor_Summary__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-740). Roll-up SUM of the Amount Matched by Donor field on Deliverable when the “Condition Met” checkbox on the corresponding Annual Matches is true.</description>
    <label>Amount Matched by Donor Summary</label>
    <summarizedField>npsp__Grant_Deadline__c.Amount_Matched_by_Donor_Numeric__c</summarizedField>
    <summaryFilterItems>
        <field>npsp__Grant_Deadline__c.Condition_Met__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>npsp__Grant_Deadline__c.npsp__Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>