unpackaged/main/default/objects/Opportunity/fields/Amount_Needed_to_Unlock_Challenge_Match__c.field-meta.xml
<CustomField>
    <fullName>Amount_Needed_to_Unlock_Challenge_Match__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-740). Manually maintained field that tracks the amount EDF needs to raise in qualifying donations in order to receive challenge match payments. Is used in Gap calculations.</description>
    <label>Amount Needed to Unlock Challenge Match</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>