unpackaged/main/default/objects/Opportunity/fields/Banned_Account__c.field-meta.xml
<CustomField>
    <fullName>Banned_Account__c</fullName>
    <formula>IF(Account.Banned_Account__c = True, True , False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banned Account</label>
    <type>Checkbox</type>
</CustomField>