unpackaged/main/default/objects/Opportunity/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in Gift Entry Template match.</description>
    <label>Campaign ID</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>