unpackaged/main/default/objects/Opportunity/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>Name of the primary campaign source.</description>
    <formula>Campaign.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of the primary campaign source.</inlineHelpText>
    <label>Campaign Name</label>
    <type>Text</type>
</CustomField>