unpackaged/main/default/objects/Opportunity/fields/Carry_Over_Date_edf__c.field-meta.xml
<CustomField>
    <fullName>Carry_Over_Date_edf__c</fullName>
    <description>Date the gift was booked in th GL as gift date</description>
    <inlineHelpText>Date the gift was booked in th GL as gift date</inlineHelpText>
    <label>Carry Over Date</label>
    <type>Date</type>
</CustomField>