unpackaged/main/default/objects/Opportunity/fields/Carry_Over_Date_Pledge_edf__c.field-meta.xml
<CustomField>
    <fullName>Carry_Over_Date_Pledge_edf__c</fullName>
    <label>Carry Over Date</label>
    <type>Date</type>
</CustomField>