unpackaged/main/default/objects/Opportunity/fields/Carry_Over_Month__c.field-meta.xml
<CustomField>
    <fullName>Carry_Over_Month__c</fullName>
    <label>Carry Over Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>