unpackaged/main/default/objects/Opportunity/fields/Challenge_Match_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Match_Criteria__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-740). Manually entered by users to outline the rules/conditions of the overall match and which donations qualify.</description>
    <label>Challenge Match Criteria</label>
    <type>TextArea</type>
</CustomField>