unpackaged/main/default/objects/Opportunity/fields/Challenge_Match_Gap__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Match_Gap__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-740). If the Amount Needed to Unlock Challenge Match is greater than the Raised to Date for Match, this field will display the difference between the two fields. Otherwise, it will be 0.</description>
    <formula>If( Amount_Needed_to_Unlock_Challenge_Match__c  &gt; Raised_to_Date_for_Challenge_Match__c, Amount_Needed_to_Unlock_Challenge_Match__c  -Raised_to_Date_for_Challenge_Match__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Challenge Match Gap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>