unpackaged/main/default/objects/Opportunity/fields/Challenge_Match_Name__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Match_Name__c</fullName>
    <description>Manually entered by users. Used to reflect what the match is, which is separate from the Opportunity Name. user should be using a standard naming convention.</description>
    <label>Challenge Match Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>