unpackaged/main/default/objects/Opportunity/fields/Challenge_Match_Originating_Donation__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Match_Originating_Donation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Donation is a challenge match originating donation.</description>
    <inlineHelpText>Donation is a challenge match originating donation. If set to TRUE, allows the Challenge Match fields to be inputted on a Grant or Major Gift Opportunity.</inlineHelpText>
    <label>Challenge Match Originating Opportunity</label>
    <type>Checkbox</type>
</CustomField>