unpackaged/main/default/objects/Opportunity/fields/Challenge_Match_Percent__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Match_Percent__c</fullName>
    <description>Manually entered based on the donor agreement. Is the foundation for the Match Ratio field.</description>
    <label>Challenge Match Percent</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>