unpackaged/main/default/objects/Opportunity/fields/Challenge_Match_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Match_Purpose__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-740). Manually entered by users and describes the programmatic goals of the challenge match (like donor intent)</description>
    <label>Challenge Match Purpose</label>
    <type>TextArea</type>
</CustomField>