unpackaged/main/default/objects/Opportunity/fields/Challenge_Match_Qualifying_Donation__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Match_Qualifying_Donation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updates automatically via "Qualifying Opportunity Created --&gt; Update Opportunity" flow.</description>
    <inlineHelpText>Updates automatically via automation if a Qualifying Opportunity is created for a particular Opp.</inlineHelpText>
    <label>Challenge Match Qualifying Opportunity</label>
    <type>Checkbox</type>
</CustomField>