unpackaged/main/default/objects/Opportunity/fields/Challenge_Match_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Match_Ratio__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-740). Based on Match Percent field
(Match Percent/100)*100</description>
    <formula>Text (((Challenge_Match_Percent__c)/100)*100) &amp; ":1"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Challenge Match Ratio</label>
    <type>Text</type>
</CustomField>