unpackaged/main/default/objects/Opportunity/fields/Challenge_Match_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Match_Start_Date__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-740). Used to track the overall term of the challenge match laid out in the agreement; is the first date gifts can qualify for the match</description>
    <label>Challenge Match Start Date</label>
    <type>Date</type>
</CustomField>