unpackaged/main/default/objects/Opportunity/fields/Challenge_Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Match_Status__c</fullName>
    <description>Manually maintained to track the overall status of the match - is it active or closed?</description>
    <label>Challenge Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed - Met</fullName>
            </value>
            <value>
                <fullName>Completed - Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>