unpackaged/main/default/objects/Opportunity/fields/Challenge_Match_Type__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Match_Type__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-740).</description>
    <label>Challenge Match Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up to max</fullName>
            </value>
            <value>
                <fullName>All or nothing</fullName>
            </value>
            <value>
                <fullName>As much as possible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>