unpackaged/main/default/objects/Opportunity/fields/Classy_Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Classy_Form_Name__c</fullName>
    <label>Classy Form Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>