unpackaged/main/default/objects/Opportunity/fields/Close_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Close_Exchange_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Exchange Rate when Opportunity was Received or Received as Pledged. Set by the Opportunities Values Flow</inlineHelpText>
    <label>Close Exchange Rate</label>
    <referenceTo>Exchange_Rate__c</referenceTo>
    <relationshipLabel>Opportunities (Close Exchange Rate)</relationshipLabel>
    <relationshipName>ClosedOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>