unpackaged/main/default/objects/Opportunity/fields/Contact_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_ID__c</fullName>
    <description>Supports passing Contact ID to Ledger Entry for NetSuite Integration</description>
    <formula>npsp__Primary_Contact__r.Contact_Record_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Record ID</label>
    <type>Text</type>
</CustomField>