unpackaged/main/default/objects/Opportunity/fields/Cost_Share_Source__c.field-meta.xml
<CustomField>
    <fullName>Cost_Share_Source__c</fullName>
    <inlineHelpText>Source(s) of EDF’s cost-share contribution, e.g. cash or in-kind.</inlineHelpText>
    <label>Cost Share Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>