unpackaged/main/default/objects/Opportunity/fields/Do_Not_Acknowledge_Reason__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Acknowledge_Reason__c</fullName>
    <label>Do Not Acknowledge Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>