unpackaged/main/default/objects/Opportunity/fields/Donation_adjustment_code__c.field-meta.xml
<CustomField>
    <fullName>Donation_adjustment_code__c</fullName>
    <inlineHelpText>Code used to indicate reason for donation or pledge adjustment</inlineHelpText>
    <label>Donation adjustment code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carry-over</fullName>
            </value>
            <value>
                <fullName>Designation Adjustment</fullName>
            </value>
            <value>
                <fullName>Donation revision</fullName>
            </value>
            <value>
                <fullName>Donation Revision - Amount Decrease</fullName>
            </value>
            <value>
                <fullName>Donation Revision - Amount Increase</fullName>
            </value>
            <value>
                <fullName>Entity Adjustment - correct bank</fullName>
            </value>
            <value>
                <fullName>Entity Adjustment - wrong bank but correct entry</fullName>
            </value>
            <value>
                <fullName>Entity Adjustment - wrong entry and bank</fullName>
            </value>
            <value>
                <fullName>Entry Error</fullName>
            </value>
            <value>
                <fullName>No adjusting entry</fullName>
            </value>
            <value>
                <fullName>Partial chargeback</fullName>
            </value>
            <value>
                <fullName>Partial refund</fullName>
            </value>
            <value>
                <fullName>Payment transfer</fullName>
            </value>
            <value>
                <fullName>Reclass - Admin</fullName>
            </value>
            <value>
                <fullName>Write off – Allowance</fullName>
            </value>
            <value>
                <fullName>Write off – Bad Debt</fullName>
            </value>
            <value>
                <fullName>Write off – Deferred Government Revenue</fullName>
            </value>
            <value>
                <fullName>Write off – Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>