unpackaged/main/default/objects/Opportunity/fields/Donor_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Donor_Change_Type__c</fullName>
    <description>Supports Subledger suppression of irrelevant donor changes.</description>
    <label>Donor Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development to Membership</fullName>
            </value>
            <value>
                <fullName>Membership to Development</fullName>
            </value>
            <value>
                <fullName>Between Development</fullName>
            </value>
            <value>
                <fullName>Ignore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>