unpackaged/main/default/objects/Opportunity/fields/Donor_Intent__c.field-meta.xml
<CustomField>
    <fullName>Donor_Intent__c</fullName>
    <label>Donor Intent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>