unpackaged/main/default/objects/Opportunity/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <description>Employer at time of donation.</description>
    <inlineHelpText>Employer at time of donation.</inlineHelpText>
    <label>Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>